--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">TaskSheduler</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cancel">Отмена</string>
+    <string name="sava">Сохранить</string>
+    <string name="date_hint">Дата</string>
+    <string name="name_task_hint">Название</string>
+    <string name="start_time_hint">Начало</string>
+    <string name="end_time_hint">Окончание</string>
+    <string name="description_field_hint">Описание</string>
 </resources>
